; ModuleID = '/home/carl/AnghaBench/libui/_wip/examples_drawtext/extr_attributes.c_addFeature.c'
source_filename = "/home/carl/AnghaBench/libui/_wip/examples_drawtext/extr_attributes.c_addFeature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@curFeature = common dso_local global i64 0, align 8
@nFeatures = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"TODO (also TODO is there a panic function?)\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@features = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32)* @addFeature to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @addFeature(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i64, i64* @curFeature, align 8
  %7 = load i64, i64* @nFeatures, align 8
  %8 = icmp uge i64 %6, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i32, i32* @stderr, align 4
  %11 = call i32 @fprintf(i32 %10, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* @EXIT_FAILURE, align 4
  %13 = call i32 @exit(i32 %12) #3
  unreachable

14:                                               ; preds = %2
  %15 = call i32* (...) @uiNewOpenTypeFeatures()
  store i32* %15, i32** %5, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 0
  %19 = load i8, i8* %18, align 1
  %20 = load i8*, i8** %3, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 1
  %22 = load i8, i8* %21, align 1
  %23 = load i8*, i8** %3, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 2
  %25 = load i8, i8* %24, align 1
  %26 = load i8*, i8** %3, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 3
  %28 = load i8, i8* %27, align 1
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @uiOpenTypeFeaturesAdd(i32* %16, i8 signext %19, i8 signext %22, i8 signext %25, i8 signext %28, i32 %29)
  %31 = load i32*, i32** %5, align 8
  %32 = load i32**, i32*** @features, align 8
  %33 = load i64, i64* @curFeature, align 8
  %34 = getelementptr inbounds i32*, i32** %32, i64 %33
  store i32* %31, i32** %34, align 8
  %35 = load i64, i64* @curFeature, align 8
  %36 = add i64 %35, 1
  store i64 %36, i64* @curFeature, align 8
  %37 = load i32*, i32** %5, align 8
  ret i32* %37
}

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32* @uiNewOpenTypeFeatures(...) #1

declare dso_local i32 @uiOpenTypeFeaturesAdd(i32*, i8 signext, i8 signext, i8 signext, i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
